# valence

./: .gitignore  LICENSE  README.md  codebook.toml  pyproject.toml
src/: analyze_audio.py  audio_features.py  audio_scanner.py  config.py  docker-compose.yml  features.csv  main.py  my_techno_analysis.csv  output.json  process_audio.py  valence.db  visualization.py  visualization_router.py
src/db/: engine.py  session.py
src/models/: audio_features.py  category.py  track.py
src/routers/: visualization.py
